# salesforce-rs

./: .gitmodules  AGENTS.md  CHANGELOG.md  Cargo.toml  README.md
.github/workflows/: publish.yml  release.yml  test.yml
examples/salesforce-core/: bulkapi.rs  managed_subscription.rs  pubsub.rs  pubsubapi.rs  restapi.rs  soapapi.rs  toolingapi.rs
examples/salesforce-pubsub/: main.rs
salesforce-core/: Cargo.toml  README.md
salesforce-core/src/: bulkapi.rs  client.rs  http.rs  lib.rs  pubsub.rs  sobject.rs
salesforce-core/src/bulkapi/: client.rs  ingest.rs  mod.rs  query.rs
salesforce-core/src/pubsub/: client.rs  context.rs
salesforce-core/src/pubsubapi/: client.rs  mod.rs
salesforce-core/src/restapi/: client.rs  composite.rs  flow.rs  mod.rs  search.rs  sobject.rs
salesforce-core/src/soapapi/: client.rs  merge.rs  mod.rs
salesforce-core/src/sobject/: client.rs  crud.rs
salesforce-core/src/tooling/: client.rs  error.rs  mod.rs  types.rs
salesforce-core/src/toolingapi/: client.rs  error.rs  mod.rs
salesforce-core/tests/: auth.rs  bulkapi.rs  common.rs  composite.rs  flow.rs  restapi.rs  soapapi.rs
