[workspace]
resolver = "2"
members = [
    "salesforce-core",
    "generated/salesforce-core/bulkapi",
    "generated/salesforce-core/restapi",
    "generated/salesforce-core/toolingapi",
    "generated/salesforce-core/pubsubapi",
]

[workspace.package]
version = "0.13.0"
authors = ["CONNVE"]
license = "MPL-2.0"
edition = "2021"
repository = "https://github.com/connve/salesforce-rs"
homepage = "https://github.com/connve/salesforce-rs"
publish = true

[workspace.dependencies]
tokio = { version = "1.48", default-features = false, features = [
    "macros",
    "rt-multi-thread",
    "sync",
    "signal",
] }
tokio-stream = { version = "0.1", default-features = false, features = [
    "time",
] }
tokio-util = { version = "0.7", default-features = false }
futures-util = { version = "0.3", default-features = false, features = ["std"] }
tonic = { version = "0.14", default-features = false, features = [
    "transport",
    "codegen",
] }
prost = { version = "0.14", default-features = false, features = ["std"] }
prost-types = { version = "0.14", default-features = false, features = ["std"] }
tonic-build = { version = "0.14", default-features = false }
tonic-prost-build = { version = "0.14", default-features = false }
prost-build = { version = "0.14", default-features = false }
tonic-prost = { version = "0.14", default-features = false }
serde = { version = "1.0", default-features = false, features = ["derive"] }
serde_json = { version = "1.0", default-features = false, features = ["std"] }
oauth2 = { version = "5.0", default-features = false, features = ["reqwest"] }
reqwest = { version = "0.13", default-features = false, features = [
    "json",
    "form",
    "rustls",
] }
thiserror = { version = "2.0", default-features = false, features = ["std"] }
url = { version = "2.5", default-features = false }
bytes = { version = "1.11", default-features = false, features = ["std"] }
tracing = { version = "0.1", default-features = false, features = ["std"] }
tracing-subscriber = { version = "0.3", default-features = false, features = [
    "fmt",
    "ansi",
] }
progenitor = "0.13"
progenitor-client = "0.13"
openapiv3 = { version = "2.2", default-features = false }
serde_yaml = { version = "0.9", default-features = false }
chrono = { version = "0.4", default-features = false, features = [
    "serde",
    "std",
] }
