[package]
name = "salesforce_core"
version.workspace = true
authors.workspace = true
license.workspace = true
edition.workspace = true
publish.workspace = true

[lib]
name = "salesforce_core"
path = "src/lib.rs"

[features]
trace = []

[dependencies]
tokio = { workspace = true }
tokio-stream = { workspace = true }
thiserror = { workspace = true }
url = { workspace = true }
salesforce_core_pubsubapi = { path = "../generated/salesforce-core/pubsubapi" }
salesforce_core_bulkapi = { path = "../generated/salesforce-core/bulkapi" }
salesforce_core_restapi = { path = "../generated/salesforce-core/restapi" }
salesforce_core_toolingapi = { path = "../generated/salesforce-core/toolingapi" }
oauth2 = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tonic = { workspace = true }
tracing = { workspace = true }
futures-util = { workspace = true }

[dev-dependencies]
tracing-subscriber = { workspace = true }

[[example]]
name = "pubsubapi"
path = "../examples/salesforce-core/pubsubapi.rs"

[[example]]
name = "bulkapi"
path = "../examples/salesforce-core/bulkapi.rs"

[[example]]
name = "restapi"
path = "../examples/salesforce-core/restapi.rs"

[[example]]
name = "toolingapi"
path = "../examples/salesforce-core/toolingapi.rs"
