[package]
name = "salesforce_core"
version.workspace = true
authors.workspace = true
license.workspace = true
edition.workspace = true
rust-version.workspace = true
description = "Unofficial Rust SDK for Salesforce Core APIs (Sales, Service, Platform)"
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
readme = "README.md"
keywords.workspace = true
categories.workspace = true
publish.workspace = true

[lib]
name = "salesforce_core"
path = "src/lib.rs"

[features]
default = ["restapi", "bulkapi", "toolingapi", "pubsubapi", "soapapi"]
restapi = ["dep:salesforce_core_restapi"]
bulkapi = ["dep:salesforce_core_bulkapi", "dep:futures-util"]
toolingapi = ["dep:salesforce_core_toolingapi"]
pubsubapi = ["dep:salesforce_core_pubsubapi", "dep:tonic", "dep:futures-util"]
soapapi = []
trace = ["tracing/attributes"]

[dependencies]
tokio = { workspace = true }
tokio-stream = { workspace = true }
thiserror = { workspace = true }
url = { workspace = true }
salesforce_core_pubsubapi = { workspace = true, optional = true }
salesforce_core_bulkapi = { workspace = true, optional = true }
salesforce_core_restapi = { workspace = true, optional = true }
salesforce_core_toolingapi = { workspace = true, optional = true }
oauth2 = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tonic = { workspace = true, optional = true }
tracing = { workspace = true }
futures-util = { workspace = true, optional = true }

[dev-dependencies]
tracing-subscriber = { workspace = true }

[[example]]
name = "pubsubapi"
path = "../examples/salesforce-core/pubsubapi.rs"
required-features = ["pubsubapi"]

[[example]]
name = "bulkapi"
path = "../examples/salesforce-core/bulkapi.rs"
required-features = ["bulkapi"]

[[example]]
name = "restapi"
path = "../examples/salesforce-core/restapi.rs"
required-features = ["restapi"]

[[example]]
name = "toolingapi"
path = "../examples/salesforce-core/toolingapi.rs"
required-features = ["toolingapi"]

[[test]]
name = "restapi"
path = "tests/restapi.rs"
required-features = ["restapi"]

[[test]]
name = "bulkapi"
path = "tests/bulkapi.rs"
required-features = ["bulkapi"]

[[test]]
name = "composite"
path = "tests/composite.rs"
required-features = ["restapi"]

[[test]]
name = "flow"
path = "tests/flow.rs"
required-features = ["restapi"]

[[example]]
name = "soapapi"
path = "../examples/salesforce-core/soapapi.rs"
required-features = ["soapapi", "restapi"]

[[test]]
name = "soapapi"
path = "tests/soapapi.rs"
required-features = ["soapapi", "restapi"]
